--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>Serverless Express Example</title>
+		<title>Example NUCoach module lambda function</title>
     </head>
     <body>
         <h1>Hello from Express</h1>
