--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>Example NUCoach module lambda function</title>
+		<title>NUCoach External module</title>
     </head>
     <body>
-        <h1>Hello from Express</h1>
-		<p>this page is served by Express, through 
-		<a href="https://www.npmjs.com/package/aws-serverless-express">aws-serverless-express</a> and 
-		<a href="https://claudiajs.com/tutorials/deploying-proxy-api.html">Claudia.JS Proxy API</a></p>
+        <h1>NUCoach Sample Module</h1>
+		<p>This is a sample NUCoach module web page. This can be set as a website for your module.</p>
     </body>
 </html>
